<resources>

    <string name="facebook_app_id">140877289852815</string>
    <string name="fb_login_protocol_scheme">fb140877289852815</string>

    <string name="app_name">Firebase Test</string>
    <string name="login_btn">Login</string>
    <string name="register_text">Dont have any account ?</string>
    <string name="register_btn">Register</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="display_name_hint">Display Name</string>
    <string name="status_hint">Status Message</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="change_email_btn">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="new_confirm_password_hint">New Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="app_title">Firebase Test</string>
    <string name="login_with_facebook">Login with Facebook</string>
</resources>
